feat: enhance CategoryService to include sorting functionality in findAll method